# compscicoach

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  webpack.config.js
assets/markdowns/: SUCFUQZTAWUYSDDZ.md
assets/schema/: post-schema.json
assets/scripts/: author-create.js  author-schema.json  author.js  post.js  tag.js
assets/styles/: input.css  output.css
pages/: blog-post.hbs  head.hbs  header.hbs  main.hbs
pages/admin/: admin-main.hbs  author-create.hbs  author-edit.hbs  author-list.hbs  post-create.hbs  post-edit.hbs  post-list.hbs  tag-create.hbs  tag-edit.hbs  tag-list.hbs
src/: environ.rs  file_ops.rs  main.rs  models.rs  pages.rs
src/api/: files.rs  photo.rs
src/entities/: blogs.rs  image.rs  mod.rs
src/pages/: blogs.rs  mod.rs
src/pages/admin/: author.rs  post.rs  tag.rs
src/pages/index/: blogs.rs  mod.rs
src/utils/: date_ops.rs  db_ops.rs  image_ops.rs  mod.rs  string_ops.rs
