[package]
name = "compscicoach"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.5.1", features = ["macros"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.36.0", features = ["full"] }
env_logger = "0.11.3"
log = "0.4.21"
actix-cors = "0.7.0"
handlebars = {version="5.1.2"}
pulldown-cmark = "0.11.0"
actix-files = "0.6.5"
rand = "0.8.5"
mongodb = {version ="2.8.2"}
chrono = { version = "0.4.*", features = ["serde"] }
bcrypt = "0.15.1"
crc32fast = "1.4.2"
hex = "0.4.3"
sha2 = "0.10.8"
jsonschema = "0.18.0"
futures = "0.3.30"
actix-multipart = "0.6.2"
mime_guess = "2.0.4"
image = "0.25.1"
